GS-12354: JQ Bug - Fixed the overflow of buttons on preview discussion hover.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -4831,7 +4831,7 @@ body.cobranded #pageGS {
 }
 
 #previewDiscussionDialog .sd-btn-layout {
-    margin: 0 20px 24px 70px;
+    margin: 0 20px 0 70px;
 }
 
 /* =12c-6 elementary schools grade by grade
